styles.css
@font-face {
    font-family: "Norse Bold";
    src: url("Norse-Bold.otf") format("opentype");
}

* {
    margin: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    border: 2px solid red;
}

/*border: 2px solid red;*/

.flex-container {
    display: flex;
    flex-wrap: wrap;

}

/* Todo: change layout for smartphone*/
.hero-container {
    background-image: url("halie-west-25xggax4bSA-unsplash.jpg");
    background-position: center;
    /* Center the image */
    background-repeat: no-repeat;
    /* Do not repeat the image */
    background-size: cover;
    /* Resize the background image to cover the entire container */
    height: 100vh;
    width: 30vw;
    color: white;
}

.hero-title {
    font-family: "Norse Bold";
    font-size: 75px;
    padding: 10px;
    margin-top: 50%;
    display: flex;
    justify-content: center;
    /** X-axis align **/
    background: rgba(0, 0, 0, 0.4)
        /*  40% opaque black */
}

.hero-photo-source {
    font-size: small;
    font-weight: normal;
    margin-top: 90%;
    display: flex;
    justify-content: center;
}

.hero-photo-source:nth-of-type(1)>a {
    color: white;
}

.main-container {
    height: 100vh;
    width: 69vw;
    background-color: lightgray;
}

.form-container {
    background-color: aliceblue;
}

form {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

input {
    width: 90%;
}

.form-input-container {
    width: 30vw;
}

